--- a/src/app.scss
+++ b/src/app.scss
@@ -1,11 +1,3 @@
-#app {
-  padding: 0;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  .container-box {
-    width: 400px;
-    height: 300px;
-  }
+.mx-auto {
+  margin: auto;
 }
